--- a/services/writer/Dockerfile
+++ b/services/writer/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.9
+
 WORKDIR /app
-ADD . /app
+
+ADD ./requirements.txt ./requirements.txt
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+ADD ./main.py ./main.py
+
 EXPOSE 8081
-CMD ["python"]
-ENTRYPOINT ["main.py"]
+
+CMD ["python", "main.py"]
